--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,17 @@
   --color-white: #ffffff;
   --color-dairy: #fcfcfc;
   /* Fonds */
-  --primary-fonds: "Roboto",sans-serif;
-  --secondary-fond: "Raleway",sans-serif;
+  --primary-fonds: "Roboto", sans-serif;
+  --secondary-fond: "Raleway", sans-serif;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 body {
-  font-family: "Roboto",sans-serif;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   background-color: white;
   color: var(--color-slate);
@@ -25,12 +31,55 @@ body {
 /* Base style */
 .list {
   list-style: none;
-  
 }
 .link {
   text-decoration: none;
 }
 /* Start */
+.header-logo {
+  padding: 0;
+  margin-left: 156px;
+  margin-right: 76px;
+  justify-content: flex-start;
+}
+.header-container {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+.header-nav-basic {
+  display: flex;
+  align-items: flex-start;
+  width: 261px;
+  gap: 40px;
+  padding: 24px 0;
+}
+.contacts-title {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 40px;
+}
+.contacts {
+  padding: 24px 0;
+  margin-left: auto;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -68,10 +117,15 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
+  height: 56px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-decoration: none;
   text-transform: none;
+  display: block;
+  border: none;
+  border-radius: 4px;
+
   color: var(--color-white);
   background-color: var(--color-iris);
 }
@@ -95,8 +149,8 @@ body {
 }
 .btn-portfolio:hover,
 :focus {
-background-color:var(--color-ocean);
-color: var(--color-white);
+  background-color: var(--color-ocean);
+  color: var(--color-white);
 }
 /* feature */
 .hidden {
@@ -105,14 +159,15 @@ color: var(--color-white);
 /* Heder style */
 .order {
   background-color: var(--color-navy-blue-modal);
-
 }
 .order-title {
   font-size: 56px;
   font-family: "Roboto";
   font-weight: 700;
+  text-align: center;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  max-width: 496px;
   color: var(--color-white);
 }
 .feature-title {
@@ -157,22 +212,19 @@ color: var(--color-white);
   color: var(--color-navy-blue);
 }
 .team-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
 
-letter-spacing: 0.02em;
-color: var(--color-navy-blue);
-
-
+  letter-spacing: 0.02em;
+  color: var(--color-navy-blue);
 }
 .subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   color: var(--color-navy-blue);
-  letter-spacing: 0.02em 
-  
+  letter-spacing: 0.02em;
 }
 .tim-about {
   font-weight: 400;
@@ -189,18 +241,18 @@ color: var(--color-navy-blue);
 }
 
 .row-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: var(--color-navy-blue);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--color-navy-blue);
 }
 .card-title {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--color-slate);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-slate);
 }
 
 .footer {
